@startuml
hide circle
skinparam classAttributeIconSize 0

' Main Classes
class Main {
  - questionBank: QuestionBank
  - storage: StorageFile
  - ui: TextUi
  + run()
  + runUserCommandUntilTermination()
}

class TextUi {
  + getUserCommand(): String
  + displayResults(CommandResult)
  + printToUser(String)
}

class Parser {
  - ongoingCommand: Command
  + parseCommand(String, QuestionBank, StorageFile): Command
}

' Interfaces
interface "<<interface>> \nMultistep" {
  + handleMultistepCommand(String, QuestionBank): Command
}

' Command Hierarchy
class Command {
  + execute(): CommandResult
  + isCommandComplete(): boolean
  + keepProgramRunning(): boolean
}

' Command Implementations
class SolveCommand {
  - currentStep: Step
  - questionIndex: int
  - getQuestionIndex(String, QuestionBank): String
  # updateCommandMessage(String)
  + handleMultistepCommand(String, QuestionBank): Command
}

' Enums
enum Step {
  GET_ANSWER
  GET_TRY_AGAIN_RESPONSE
}

' Data Classes
class QuestionBank {
  + getQuestion(int): Question
  + getQuestionCount(): int
}

' Relationships
Main --> TextUi
Main --> Parser
Main --> QuestionBank

Parser --> Command
Parser ..> SolveCommand

Command <|-- SolveCommand
"<<interface>> \nMultistep" <|.. SolveCommand

SolveCommand --> Step
SolveCommand --> QuestionBank

TextUi ..> CommandResult : displays

' Notes
note bottom of SolveCommand
  State Machine Flow:
  1. GET_ANSWER → GET_TRY_AGAIN (if wrong)
  2. GET_TRY_AGAIN → GET_ANSWER (if 'Y')
  3. Completes when correct or 'N'
end note

note bottom of Command
  Command Pattern:
  - execute() handles single-step
  - Multistep interface handles stateful commands
end note

note top of "<<interface>> \nMultistep"
  <<interface>>
  Defines contract for
  multi-step command handling
end note
@enduml